--- a/style/style.css
+++ b/style/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .text h1 {
-    font-size: 50px;
+    font-size: clamp(10px, 8vw, 50px);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -59,7 +59,7 @@ body {
     width: 25rem;
     height: 2rem;
     border-radius: 10px;
-    border: 1px solid  #0466c8;
+    border: 1px solid #0466c8;
     outline: none;
 }
 
@@ -94,7 +94,7 @@ body {
     visibility: hidden;
 }
 
-#closeBtn.open{
+#closeBtn.open {
     opacity: 1;
     visibility: visible;
 }
@@ -335,4 +335,50 @@ body {
 
 .dlt-section button:hover {
     background-color: #9f0606;
+}
+
+@media only screen and (max-width: 620px) {
+
+    .search input {
+        width: 12rem;
+        height: 2rem;
+
+    }
+
+    .search button {
+        margin-top: 5px;
+    }
+
+    .input-section input {
+
+        font-size: 15px;
+    }
+
+    .contact ul {
+    
+    font-size: 15px;
+}
+}
+
+@media screen and (min-width: 620px) and (max-width: 768px) {
+
+    .search input {
+        width: 20rem;
+        height: 2rem;
+
+    }
+
+    .search button {
+        margin-top: 5px;
+    }
+
+    .input-section input {
+
+        font-size: 15px;
+    }
+
+    .contact ul {
+    
+    font-size: 20px;
+}
 }
